--- a/css/storefront/header.css
+++ b/css/storefront/header.css
@@ -84,72 +84,7 @@ a:visited {
     color:white;
 }
 
-.menu {
-    width: 20%;
-    height: 100%;
-    background-color: #ffffff;
-    opacity: 0.8;
-    position: fixed;
-    margin: 0;
-    padding: 0;
-    left: -400px;
-    transition: left 0.5s;
-    z-index: 3;
-}
 
-h1#menu-button {
-    text-align: center;
-    font-weight: normal;
-    padding-top: 80px;
-    color: black;
-    font-weight: 400;
-    padding-top: 80%;
-}
-
-.menu > ul {
-    text-decoration: none;
-    list-style: none;
-    text-align: center;
-    padding-top: 20px;
-    padding-left: 0;
-}
-
-.ulmenu > li > a {
-    display: block;
-    padding-bottom: 12px;
-    color: black;
-}
-
-.ulmenu li a:hover {
-   color: #c17900; 
-}
-
-input#nav-trigger:checked ~ nav {
-    left:0;
-}
-          
-#nav-trigger {
-    position:absolute;
-    left: -100px;
-    display: none;
-}
-
-label[for="nav-trigger"] {
-    display: inline-block;
-    color: white;
-    z-index: 5;
-}
-
-.toggle {
-    font-size: 30px;
-    margin-left: 35px;
-    margin-top: 25px;
-    position: relative;
-}
-
-input#nav-trigger:checked ~ .toggle {
-    transition: right 0.9s;
-}
 
 /* QUANTITY IN CART*/
 #qty-cart {
@@ -178,9 +113,97 @@ input#nav-trigger:checked ~ .toggle {
 
 
 
+@media only screen and (max-width: 500px) { 
 
+    .menu {
+        width: 20%;
+        height: 100%;
+        background-color: #ffffff;
+        opacity: 0.8;
+        position: fixed;
+        margin: 0;
+        padding: 0;
+        left: -400px;
+        transition: left 0.5s;
+        z-index: 3;
+    }
 
+    h1#menu-button {
+        text-align: center;
+        font-weight: normal;
+        padding-top: 80px;
+        color: black;
+        font-weight: 400;
+        padding-top: 80%;
+    }
 
+    .menu > ul {
+        text-decoration: none;
+        list-style: none;
+        text-align: center;
+        padding-top: 20px;
+        padding-left: 0;
+    }
+
+    .ulmenu > li > a {
+        display: block;
+        padding-bottom: 12px;
+        color: black;
+    }
+
+    .ulmenu li a:hover {
+       color: #c17900; 
+    }
+
+    input#nav-trigger:checked ~ nav {
+        left:0;
+    }
+              
+    #nav-trigger {
+        position:absolute;
+        left: -100px;
+        display: none;
+    }
+
+    label[for="nav-trigger"] {
+        display: inline-block;
+        color: white;
+        z-index: 5;
+    }
+
+    .toggle {
+        font-size: 24px;
+        margin-left: 35px;
+        margin-top: 32px;
+        position: relative;
+    }
+
+    input#nav-trigger:checked ~ .toggle {
+        transition: right 0.9s;
+    }
+
+    div.menu_icons a {
+        margin-right: 0;
+    }
+
+    .menu_icons a:first-child {
+        display: none;
+    }
+
+    div.small_banner {
+        width: 100%;
+        padding: 3.5%;
+        font-size: 10px;
+    }
+
+    .startpage_bigimage {
+        width: 100%;
+        height: 100vh;
+    }
+    button#create {
+        display: none;
+    }
+}
 
 
 
@@ -202,7 +225,7 @@ input#nav-trigger:checked ~ .toggle {
 }
     
     #id_logo {
-        padding-left: 82px;
+        padding-left: 60px;
     }
     
 }
