--- a/css/storefront/startpage.css
+++ b/css/storefront/startpage.css
@@ -67,6 +67,11 @@ body {
     max-width: 100%;
     max-height: 1150px;
     object-fit: cover;
+    display: block;
+}
+
+.topimage2 {
+    display:none;
 }
 
 /* Upptäck din nischdoft-button */
@@ -206,7 +211,13 @@ button:hover {
 
 .discover_women > .bigperfume {
     width: 100%;
+    display: block;
 }
+
+.discover_women > .bigperfume2 {
+    display: none;
+}
+
 
 p.all_women {
     position: absolute;
@@ -407,6 +418,147 @@ p.thephilosophy {
      -webkit-filter: blur(2 px); /* Safari 6.0 - 9.0 */
     filter: blur(2px);
 }
+
+
+
+
+
+
+@media only screen and (max-width: 500px) { 
+
+    .topimage {
+        display: none;
+    }
+
+    .topimage2 {
+        display: block;
+        max-height: 550px;
+        margin-top: 5%;
+    }
+
+    .startpage_bigimage {
+        max-height: 620px;
+    }
+
+    h2.headline_gender {
+        font-size: 17px;
+        margin-top: -3%;
+        margin-bottom: 3%;
+    }
+
+    .main_wrapper_startpage {
+        flex-direction: column;
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+
+    .product_wrapper {
+        width: 100%;
+    }
+
+    .discover_women > .bigperfume {
+        display: none;
+    }
+
+    .discover_women > .bigperfume2 {
+        display: block;
+    }
+
+    .discover_men > .bigperfume {
+        display: none;
+    }
+
+    .discover_men > .bigperfume2 {
+        display: block;
+    }
+
+    p.all_women {
+        background-color: white;
+        padding: 10%;
+        top: 47%;
+        left: 9%;
+        color: black; 
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .arrow-left {
+        display: none;
+    }
+
+    #register_member {
+        margin-top: 2.3%;
+        margin-bottom: 6%;
+        height: 350px;
+    }
+
+    .placement-left {
+        display: none;
+    }
+
+    .placement-right {
+        width: 100%;
+        color: white;
+        text-align: center;
+        padding: 7%;
+        margin-top: 10%;
+        font-size: 19px;
+        margin-right: 0px;
+        flex: 0 0 100%;
+    }
+
+    button#ansok {
+        width: 96%;
+        padding: 15px; 
+        margin-top: 8%;
+    }
+
+    p.all_men {
+        background-color: white;
+        padding: 11%;
+        top: 47%;
+        left: 12%;
+        color: black; 
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .arrow-right {
+        display: none;
+    }
+
+    #philosophy {
+        margin-top: 2%;
+    }
+
+    p.thephilosophy {
+        font-size: 32px;
+        padding: 9%;
+        margin-top: 10%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /******* MEDIA QUERIES FÖR SKÄRM < 950px ************/
