--- a/css/storefront/checkout.css
+++ b/css/storefront/checkout.css
@@ -215,6 +215,84 @@ hr#minicart {
 
 
 
+
+
+
+/* Mobilanpassning för iphone 6 plus */
+
+@media only screen and (max-width: 500px) { 
+
+    h1.shoppingbag {
+        font-size: 19px;
+        text-align: center;
+    }
+
+    h1:before {
+        display: block;
+        height: 1px;
+        content: '';
+        background: #D3D3D3;
+        width: 14%;
+        margin-right: 20px;
+    }
+
+    h1:after {
+        display: block;
+        height: 1px;
+        content: '';
+        background: #D3D3D3;
+        width: 14%;
+        margin-left: 20px;
+    }
+
+
+
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*--Media Queries--*/
 
 
