--- a/css/storefront/header.css
+++ b/css/storefront/header.css
@@ -1,15 +1,3 @@
-@font-face {
-  font-family: 'millhouse-icons';
-  src: url('fontello_icons/font/millhouse-icons.eot?90053595');
-  src: url('fontello_icons/font/millhouse-icons.eot?90053595#iefix') format('embedded-opentype'),
-       url('fontello_icons/font/millhouse-icons.woff2?90053595') format('woff2'),
-       url('fontello_icons/font/millhouse-icons.woff?90053595') format('woff'),
-       url('fontello_icons/font/millhouse-icons.ttf?90053595') format('truetype'),
-       url('fontello_icons/font/millhouse-icons.svg?90053595#millhouse-icons') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
 body{
     margin: 0;
     z-index: -1;
@@ -28,6 +16,77 @@ header {
     padding: 0;
 }
 
+.menu {
+    width: 20%;
+    height: 100%;
+    background-color: #ffffff;
+    opacity: 0.8;
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    left: -400px;
+    transition: left 0.5s;
+    z-index: 3;
+}
+
+    h1#menu-button {
+        text-align: center;
+        font-weight: normal;
+        padding-top: 80px;
+        color: black;
+        font-weight: 400;
+        padding-top: 80%;
+    }
+
+    .menu > ul {
+        text-decoration: none;
+        list-style: none;
+        text-align: center;
+        padding-top: 20px;
+        padding-left: 0;
+    }
+
+    .ulmenu > li > a {
+        display: block;
+        padding-bottom: 12px;
+        color: black;
+    }
+
+    .ulmenu li a:hover {
+       color: #c17900; 
+    }
+
+    input#nav-trigger:checked ~ nav {
+        left:0;
+    }
+              
+    #nav-trigger {
+        position:absolute;
+        left: -100px;
+        display: none;
+    }
+
+    label[for="nav-trigger"] {
+        display: inline-block;
+        color: white;
+        z-index: 5;
+    }
+
+    .toggle {
+        font-size: 24px;
+        margin-left: 35px;
+        margin-top: 32px;
+        position: relative;
+    }
+
+    input#nav-trigger:checked ~ .toggle {
+        transition: right 0.9s;
+    }
+
+    div.menu_icons a {
+        margin-right: 0;
+    }
+
 .menu_icons {
     margin: 35px;
     font-size: 20px;
@@ -35,8 +94,8 @@ header {
 }
 
 div.menu_icons a {
-    margin-right: 30px;
-    font-size: 17px;
+    margin-right: 23px;
+    font-size: 25px;
     margin: top: 2px;
 
 }
@@ -49,7 +108,7 @@ div.menu_icons a:last-child {
     padding-top: 25px;
     display: inline-block;
     margin: 0 auto;
-    padding-left: 100px;
+    padding-left: 70px;
 }
 
 a {
@@ -107,7 +166,6 @@ a:visited {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
 
 
 
