--- a/css/storefront/login.css
+++ b/css/storefront/login.css
@@ -1,23 +1,25 @@
 * {
 	box-sizing: border-box;
 	margin: 0;
+	font-family: 'Lato';
 }
+
  .main_wrapper{
  	width: 100%;
+ 	height: 620px;
  }
 
 	div.login {
 	width: 100%;
 	margin: 0 auto;
 	min-height: 200px;
-/*	border: 1px solid #AE9266;*/
 }
 
 h2.login_title  {
-	font-size: 20px;
+	font-size: 26px;
 	text-align: center;
-	color: #AE9266;
-	margin-top: 50px;
+	color: #000000;
+	margin-top: 25%;
 	padding-bottom: 25px;
 }
 
@@ -53,12 +55,12 @@ a#forgot-password{
 
  button {
  	margin: 0 auto;
- 	width: 70%;
+ 	width: 100%;
  	margin: 0 auto;
  	margin-top: 10px;
  	display: block;
  	padding: 10px;
- 	background-color: #AE9266;
+ 	background-color: #000000;
  	font-size: 12px;
  	color: white;
  	border: none;
@@ -132,10 +134,9 @@ input[type="checkbox"] {
 	padding-top: 5px;
 	padding-left: 25px;
 	padding-right: 25px;
-	border: 1px solid #AE9266;
+	border: 1px solid #000000;
 	width: 100%;
 	margin-bottom: 20px;
-
 }
 	div.create_account {
 	width: 50%;
@@ -151,7 +152,7 @@ input[type="checkbox"] {
  	}
 
  	#login {
- 	width: 40%;
+ 	width: 100%;
  	font-size: 14px;
  	}
  	
