--- a/css/storefront/login.css
+++ b/css/storefront/login.css
@@ -19,7 +19,7 @@ h2.login_title  {
 	font-size: 20px;
 	text-align: center;
 	color: #000000;
-	margin-top: 30%;
+	margin-top: 20%;
 	padding-bottom: 25px;
 }
 
@@ -28,19 +28,14 @@ h2.create_title {
 	font-size: 20px;
 	text-align: center;
 	color: black;
-	padding-top: 50px;
+	padding-top: 80px;
 	width: 60%;
 	margin: auto;
-	background-color: white;
 	text-transform: uppercase; 
 }
 
 .on_top {
-	background-color: white;
-	position: absolute;
-	top: 30%;
-	left: 12%;
-	width: 650px;
+	margin-top: 7%;
 
 }
 
@@ -103,7 +98,6 @@ input[type="checkbox"] {
 img.create_canvas {
 	width: 100%;
 	height: auto;
-	border: 2px white solid;
 	margin-top: 0.5%;
 }
 
@@ -147,11 +141,12 @@ img.create_canvas {
 	background-color: #fffffff;
 }
  	
+ 	/* Knapp ansök här */
  	button#send {
  	width: 50%;
  	font-size: 14px;
  	border: 3px solid white;
- 	margin-top: 50px;
+ 	margin-top: 30px;
  	}
 
  	#login {
@@ -159,18 +154,17 @@ img.create_canvas {
  	font-size: 14px;
  	}
  	
- 	button#send:hover {
-	background-color: white;
- 	color: #AE9266;
- 	}
 
 
  	.login_wrapper {
  	padding-top: 30px;
  }
 
-}
+hr {
+	width: 50%;
+	margin: 0 auto;
 
+}
 
 
 
