--- a/css/storefront/startpage.css
+++ b/css/storefront/startpage.css
@@ -436,6 +436,10 @@ p.thephilosophy {
         margin-top: 5%;
     }
 
+    .create p {
+        display: none;
+    }
+
     .startpage_bigimage {
         max-height: 620px;
     }
