--- a/css/storefront/header.css
+++ b/css/storefront/header.css
@@ -7,7 +7,7 @@ header {
     width: 100%;
     max-width: 1680px;
     height: 100px;
-    background-color: #000000;
+    background-color: red;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -15,6 +15,93 @@ header {
     margin: 0;
     padding: 0;
 }
+
+
+/* Bootstrap menu */
+.navbar-inverse {
+background-color: black !important;
+}
+
+.navbar-nav>li>a {
+    padding-top: 30px !important;
+    padding-bottom: 20px !important; 
+}
+
+.navbar-right {
+    margin-right: 70px !important;
+}
+
+.navbar-nav {
+    margin-left: 70px !important;
+}
+
+.nav>li>a {
+
+    padding-left: 27px !important;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: white !important;
+}
+
+.navbar-inverse .navbar-nav>li>a:hover {
+    color: #f0bb29 !important;
+}
+
+a {
+    color: #000000 !important; 
+}
+
+a:hover {
+    text-decoration: none !important;
+}
+
+/* Logotypen */
+#id_logo {
+    display: inline-block;
+    margin-top: 16px;
+    margin-left: 320px;
+}
+
+/* User icon */
+.glyphicon {
+    font-size: 18px !important;
+}
+
+/* Shopping bag icon */
+#shop_bag > i {
+    color:white;
+    position: relative;
+    top: -2px;
+    display: inline-block;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    font-size: 20px;
+}
+
+/* Antal i varukorg */
+#qty-cart {
+    height: 15px;
+    width: 15px;
+    background-color: #f0bb29;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    bottom: 5px;
+    left: -10px;
+}
+
+/* Antal */
+#qty {
+    font-size: 0.6em;
+    color: black;
+    font-weight: 300;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 
 .menu {
     width: 20%;
@@ -110,12 +197,6 @@ div.menu_icons a:last-child {
     margin-right: 0;
 }
 
-#id_logo {
-    padding-top: 25px;
-    display: inline-block;
-    margin: 0 auto;
-    padding-left: 70px;
-}
 
 a {
     text-decoration: none;
@@ -141,33 +222,7 @@ a:visited {
     color: #ffffff;
 }
 
-#shop_bag > i {
-    color:white;
-}
 
-
-
-/* QUANTITY IN CART*/
-#qty-cart {
-    height: 20px;
-    width: 20px;
-    background-color: #f0bb29;
-    border-radius: 50%;
-    display: inline-block;
-    position: relative;
-    bottom: 5px;
-    left: -10px;
-}
-
-#qty {
-    font-size: 0.7em;
-    color: black;
-    font-weight: 300;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
 
 
