--- a/css/storefront/startpage.css
+++ b/css/storefront/startpage.css
@@ -15,6 +15,7 @@ body {
     color: white;
     padding: 0.5%;
     font-size: 13px;
+    margin-top: 53px;
 }
 
 /* Omsluter allt innehåll */
@@ -436,6 +437,17 @@ p.thephilosophy {
         display: block;
         max-height: 550px;
         margin-top: 5%;
+    }
+
+    .navbar-nav {
+        text-transform: uppercase !important;
+    }
+
+    .small_banner {
+        margin-top: 7%;
+        width: 100%;
+        font-size: 16.2px;
+        padding: 2.5%;
     }
 
     .create p {
