--- a/css/storefront/category.css
+++ b/css/storefront/category.css
@@ -4,6 +4,10 @@
 	font-family: 'Lato';
 }
 
+p {
+    font-size: 13px;
+}
+
 .test {
     z-index: -1;
 }
@@ -11,7 +15,7 @@
 .cat_img {
 	object-fit: cover;
     width: 100%;
-	height: 500px;
+	height: 650px;
 	margin-bottom: 1%;
 }
 
