--- a/css/storefront/footer.css
+++ b/css/storefront/footer.css
@@ -49,11 +49,15 @@ p.granza-foooter-links {
     color: white;
     text-transform: uppercase;
     text-align: left;
-    padding-top: 10%;
+    padding-top: 15%;
     padding-left: 25%;
     padding-bottom: 10%;
     margin-left: 15%;
     margin-right: 15%;
+}
+
+p.granza-foooter-links a {
+    color: white !important;
 }
 
 p.granza-foooter-links a:hover {
