--- a/css/storefront/startpage.css
+++ b/css/storefront/startpage.css
@@ -40,7 +40,7 @@ body {
 /* Css för toppbild */
 .startpage_bigimage {
     width: 100%;
-    height: 1100px;
+    height: 1150px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -68,7 +68,7 @@ div.create {
     width: 70%;
     height: 200px;
     position: absolute;
-    top: 32%;
+    top: 36%;
     right: 0%;
     left: 0%;
 
@@ -81,8 +81,8 @@ div.create {
     color: white;
     text-align: center;
     letter-spacing: 2px;
-    font-size: 60px;
-    font-family: 'Libre Baskerville', serif;
+    font-size: 68px;
+    font-family: 'Nanum Myeongjo', serif;
     text-transform: uppercase;
 }
 
@@ -233,10 +233,10 @@ p.all_women {
 .arrow-left {
   width: 0; 
   height: 0; 
-  border-top: 20px solid transparent;
-  border-bottom: 20px solid transparent;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
   
-  border-left: 20px solid white;
+  border-left: 15px solid white;
   position: absolute;
   top: 55%;
   left: 15%;
@@ -257,7 +257,7 @@ img.mint {
 }
 
 .arrow-left:hover {
-      border-left: 20px solid #2A4128;
+      border-left: 15px solid #2A4128;
 } 
 
 
@@ -291,10 +291,10 @@ p.all_men {
 .arrow-right {
   width: 0; 
   height: 0; 
-  border-top: 20px solid transparent;
-  border-bottom: 20px solid transparent;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
   
-  border-left: 20px solid white;
+  border-left: 15px solid white;
   position: absolute;
   top: 57%;
   left: 59.2%;
@@ -335,6 +335,10 @@ Uppdelad i två block, en med bildkollage och en med bara text */
     margin-right: 21%;
     flex: 0 0 60%; 
     font-size: 25px;
+}
+
+.placement-right p {
+    font-size: 24px;
 }
 
 /* knapp för att ansöka */
