--- a/css/storefront/singleproduct.css
+++ b/css/storefront/singleproduct.css
@@ -37,7 +37,7 @@ a.button_2:hover {
   opacity: 1;
 }
 
-/* Delivery options popup info div */
+/* Delivery options popup info div desktop */
 .popup {
   margin: 350px auto;
   padding: 20px;
@@ -211,7 +211,6 @@ input {
 #single-prod-button {
     width: 60%;
     color: white;
-    background-color: transparent;
     border: none;
     padding: 12px;
     font-size: 0.8em;
@@ -302,7 +301,6 @@ hr {
     width: 50%;
 }
 
-
 .prod_img_upsale {
     width: 70%;
     margin-left:15%;
@@ -322,6 +320,7 @@ h2, h3, h4, p {
     margin-bottom: 2%;
     text-transform: uppercase;
 }
+
 
 /****** Produktrad med bilder Upsale ******/
 /* Namnet på parfymerna */
@@ -367,9 +366,9 @@ p.price {
 /* Bilder på parfymer */
 .product_wrapper img {
     max-width: 100%;
-    -moz-transition: all 200ms;
-    -webkit-transition: all 200ms;
-    transition: all 200ms;
+      -moz-transition: all 200ms;
+      -webkit-transition: all 200ms;
+      transition: all 200ms;
 }
 
 /* Knapp för lägg i varukorg */
@@ -380,8 +379,6 @@ button {
     width: 100%;
     position: relative;
     background: #f0bb29;
-
-
     color: white;
     text-transform: uppercase;
     text-decoration: none;
@@ -394,10 +391,10 @@ button:hover {
     color: white;
     z-index: 1;
     cursor: pointer;
-    -webkit-transition: background-color 1s ease-out;
-    -moz-transition: background-color 1s ease-out;
-    -o-transition: background-color 1s ease-out;
-    transition: background-color 1s ease-out;
+      -webkit-transition: background-color 1s ease-out;
+      -moz-transition: background-color 1s ease-out;
+      -o-transition: background-color 1s ease-out;
+      transition: background-color 1s ease-out;
 }
 
 
@@ -411,6 +408,76 @@ button:hover {
 }
 
 /************* MEDIA QUERIES!!!! *********/
+
+@media only screen and (max-width: 500px) {  
+
+  figure {
+    width: 100%;
+    height: 500px;
+    margin-top: 0px;
+  }
+
+  div.prod_info_wrapper {
+    width: 100%;
+    top: 70%;
+    position: relative;
+    left: 0;
+  }
+
+  .goback {
+      position: absolute;
+      top: -55%;
+      left: 3.5%;
+  }
+
+  .single_img {
+      width: 150%; 
+  }
+
+  .product_title {
+     margin-left: 9%;
+  }
+
+  .product_price {
+    margin-left: 9%;
+  }
+
+  .product_details {
+      background-color: black;
+      color: white;
+      width: 100%;
+      padding: 9%;
+      padding-top: 6%;
+      font-size: 18px;
+      margin-bottom: 0px;
+  }
+
+  form {
+    background-color: black;
+    padding: 9%;
+    margin-top: -30px;
+    margin-bottom: 40px;
+  }
+
+  .upsale_title {
+    font-size: 24px;
+  }
+
+  .button_2 {
+    display: none;
+  }
+
+  #single-prod-button {
+  }
+
+  #cart_qty {
+    width: 30%; 
+  }
+
+  #single-prod-button {
+    width: 100%; 
+  }
+}
 
 /******* MEDIA QUERIES FÖR SKÄRM > 600px ************/
 
@@ -441,8 +508,6 @@ button:hover {
 
      #single-prod-button{
         width: 40%;
-        border: 1px solid #ffffff;
-
     }
       
 }
