--- a/css/storefront/checkout.css
+++ b/css/storefront/checkout.css
@@ -21,11 +21,11 @@ h2.site_title {
     text-transform: uppercase;
     margin-top: 70px;
     margin-bottom: 30px;
-    margin-left: -10%;
+    margin-left: -14%;
 }
 
 #your-info > h2:nth-child(18) {
-    margin-left: -19%;
+    margin-left: -22%;
 
 }
 
@@ -147,10 +147,25 @@ tr {
     height: 80px;
 }
 
+/* h1 Din varukorg */
+h1.shoppingbag2 {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    font-size: 1em;
+    text-transform: uppercase;
+    color: #000000;   
+    display: flex;
+    align-items: center;
+    padding-left: 7%;
+    padding-right: 7%;
+}
+
 /* Omsluter hela minicart på aside */
 .mini-cart{
     margin: 0 auto;
-    width: 80%;
+    width: 100%;
 }
 
 body > div.aside_checkout > div > a > div > i {
@@ -199,7 +214,7 @@ hr#minicart {
     display: inline-block;
     margin-right: 7%;
     margin-left: 2%;
-    margin-top: 2%;
+    margin-top: 2.25%;
     padding: 3%;
 }
 
