--- a/css/storefront/about_us.css
+++ b/css/storefront/about_us.css
@@ -2,7 +2,7 @@
 
 img.background_flowers {
     width: 100%;
-    height: 1600px;
+    height: 1800px;
 
     position: relative;
 }
@@ -19,7 +19,7 @@ img.background_flowers {
     padding-bottom: 10%;
 
     position: absolute;
-    top: 30%;
+    top: 20%;
     left: 0;
     right: 0;
 }
@@ -40,6 +40,15 @@ p.about_us_describing_text {
     line-height: 23px;
     margin-left: 15%;
     margin-right: 15%;
+    font-style: italic;
+}
+
+p.about_us_describing_text2 {
+    color: black;
+    padding-top: 2%;
+    line-height: 23px;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 #signature {
@@ -55,9 +64,13 @@ p.about_us_describing_text {
 
 #collage {
     position: relative;
-    width: 40%;
+    width: 100%;
     margin-left: 15%;
-    margin-top: 10%;
+    margin-top: 5%;
+}
+
+#collage img {
+    width: 68%;
 }
 
 /* Bild 
