Temporär logotyp, utfyllnad

--- a/css/storefront/header.css
+++ b/css/storefront/header.css
@@ -65,8 +65,9 @@ a:hover {
 /* Logotypen */
 #id_logo {
     display: inline-block;
-    margin-top: 16px;
-    margin-left: 320px;
+    margin-top: 25px;
+    margin-left: 400px;
+    width: 140px;
 }
 
 /* User icon */
